# ChangeLog for media-libs/netpbm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.210 2009/05/05 02:10:48 vapier Exp $

*netpbm-10.46.00 (05 May 2009)

  05 May 2009; Mike Frysinger <vapier@gentoo.org> +netpbm-10.46.00.ebuild:
  Version bump.

*netpbm-10.26.61 (05 May 2009)

  05 May 2009; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.61.ebuild:
  Version bump.

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> netpbm-10.44.00-r1.ebuild:
  Stable for HPPA (bug #249384).

  28 Jan 2009; Brent Baude <ranger@gentoo.org> netpbm-10.44.00-r1.ebuild:
  stable ppc64, bug 249384

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> netpbm-10.44.00-r1.ebuild:
  ia64/sparc stable wrt #249384

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  netpbm-10.44.00-r1.ebuild:
  Stable on alpha, bug #249384

  24 Jan 2009; nixnut <nixnut@gentoo.org> netpbm-10.44.00-r1.ebuild:
  ppc stable #249384

  23 Jan 2009; Markus Meier <maekke@gentoo.org> netpbm-10.44.00-r1.ebuild:
  amd64/x86 stable, bug #249384

*netpbm-10.44.00-r1 (21 Jan 2009)

  21 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +files/netpbm-10.44.00-fontdir.patch, +netpbm-10.44.00-r1.ebuild:
  Apply fix from upstream for fontdir bug #249384.

*netpbm-10.26.59 (21 Jan 2009)

  21 Jan 2009; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.59.ebuild:
  Version bump.

*netpbm-10.44.00 (01 Nov 2008)

  01 Nov 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.44.00.ebuild:
  Version bump.

*netpbm-10.26.58 (01 Nov 2008)

  01 Nov 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.58.ebuild:
  Version bump.

  01 Oct 2008; Raúl Porcel <armin76@gentoo.org> netpbm-10.43.00.ebuild:
  alpha/ia64 stable wrt #238699

  29 Sep 2008; Jeroen Roovers <jer@gentoo.org> netpbm-10.43.00.ebuild:
  Stable for HPPA (bug #238699).

  28 Sep 2008; Markus Meier <maekke@gentoo.org> netpbm-10.43.00.ebuild:
  amd64/x86 stable, bug #238699
