@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/netpbm-10.46.00.ebuild,v 1.1 2009/05/05 02:10:48 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/netpbm-10.46.00.ebuild,v 1.2 2009/05/21 22:13:12 hkbst Exp $
 
 inherit toolchain-funcs eutils multilib prefix
 
@@ -80,6 +80,9 @@ netpbm_config() {
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
+
+	# glibc2.10 compat (bug 270351)
+	sed "s:getline:getline_nonlibc:" -i converter/ppm/xvminitoppm.c || die
 
 	epatch "${FILESDIR}"/netpbm-10.31-build.patch
 
